# web-research-router

./: .env.example  .gitignore  README.md  RELEASE_NOTES_v6.0.0.md  __init__.py  plugin.yaml  pyproject.toml  wrr-cli.py
tests/integration/: test_community_live.py  test_exa_live.py  test_github_live.py
tests/unit/: conftest.py  test_academic_engine.py  test_brave_searxng.py  test_cli_v6_flags.py  test_community.py  test_community_v5.py  test_dependency_lifecycle.py  test_deps_manifest_bridge.py  test_deps_v5.py  test_doctor.py  test_doctor_engines.py  test_doctor_local_engines.py  test_engine_loader.py  test_exa_mode.py  test_exa_payloads.py  test_formatters.py  test_fusion.py  test_github.py  test_github_v5.py  test_health_cache.py  test_local_obsidian_engine.py  test_local_qmd_engine.py  test_local_routing.py  test_local_session_engine.py  test_local_supermemory_engine.py  test_manifest_routing_schema.py  test_plugin_entry.py  test_probe.py  test_registry_bridge.py  test_requirements.py  test_router.py  test_router_modes.py  test_router_v6_shadow.py  test_runtime_detect.py  test_runtime_env.py  test_runtime_state.py  test_schemas.py  test_skill_discovery_engine.py  test_skill_v5_bundle.py  test_tools.py  (+3 more)
wrr/: __init__.py  _cli.py  config.py  deps.py  doctor.py  errors.py  formatters.py  registry.py  requirements.py  router.py  schemas.py
wrr/cli/: __init__.py  install.py  update.py
wrr/engines/: _fusion.py  _github_client.py  _local_utils.py  _probe.py  academic.py  adapter_bridge.py  base.py  brave.py  community.py  exa.py  github.py  loader.py  local_obsidian.py  local_qmd.py  local_session.py  local_supermemory.py  registry.py  searxng.py  skill_discovery.py
wrr/engines/builtin/academic/: engine.yaml
wrr/runtime/: __init__.py  detect.py  env.py  state.py
wrr/tools/: web_fetch.py  web_search.py  web_similar.py
(+10 files in other folders)
