[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-research-router"
version = "6.0.0"
description = "Semantic search router with 11 engines, mode-based routing, and RRF fusion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alex Cai"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.28",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
wrr = "wrr._cli:main"

[tool.setuptools.package-data]
wrr = ["engines/builtin/*/engine.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
